<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MLH</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="create_new_task">Create new task</string>
    <string name="new_task">New task</string>
    <string name="enter_task_name">Enter task name</string>
    <string name="new_task_name">New task name</string>
    
    <string name="experiment_list">List of experiments</string>
    <string name="task_list">List of tasks</string>
    
    <string name="create_new_experiment">Create new experiment</string>
	<string name="main_no_items">No plugins</string>
	<string name="plugin_type_not_exists">Plugin type does not exist</string>
	<string name="no_connection_to_remote_interface">Can not connect to remote interface</string>
	<string name="experiment_saved">Experiment saved</string>
	<string name="experiment_parameters">Experiment parameters</string>
	<string name="experiment_rate">Rate Experiment!</string>
	
	<string name="step_description">Step description</string>
	<string name="step_time">Step time</string>
	<string name="step_empty">Step is empty!</string>
	<string name="steps">Steps</string>
	<string name="no_steps">No steps</string>
	<string name="no_description">Current step doesn\'t have a description</string>
	
	<string name="enter_value">Enter value</string>
	<string name="result_score">Score:</string>
	<string name="save">Save</string>
	<string name="open">Open</string>
	<string name="ok">OK</string>
	<string name="delete">Delete</string>
	<string name="edit">Edit</string>
	<string name="cancel">Cancel</string>
	<string name="play">Play</string>
	<string name="next">Next</string>
	<string name="prev">Prev</string>
	<string name="timeout">Time\'s out</string>
	<string name="minutes">minutes</string>
	<string name="seconds">seconds</string>
	
	<string name="err_current_plugin">Current plugin not selected</string>
	<string name="err_plugin_connection">Plugin connection error</string>
	
	<string name="no_text">No text</string>
	
	<string name="set_task_tv">Set</string>
	
	<string name="goto_task_widget_tv">Go</string>
	
	<string name="widget_config">Widget Configuration...</string>

	<string name="finding_plugins">Finding existing plugins...</string>
	<string name="plugins_founded">plugins found</string>
	
	
</resources>
