<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textView2"
        style="@style/SubTitleFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="@string/step_time" />

    <EditText
        android:id="@+id/edit2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:inputType="numberDecimal|numberSigned" />

    <TextView
        android:id="@+id/textView3"
        style="@style/SubTitleFont"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/edit2"
        android:layout_below="@+id/textView2"
        android:text="@string/minutes" />

    <TextView
        android:id="@+id/textView1"
        style="@style/SubTitleFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit2"
        android:layout_marginTop="30dp"
        android:text="@string/step_description" />

    <EditText
        android:id="@+id/edit1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_value" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/nice_button"
        android:gravity="center"
        android:shadowColor="@android:color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/play"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnPlay"
        android:layout_margin="5dp"
        android:background="@drawable/nice_button"
        android:text="@string/next" />

    <Button
        android:id="@+id/btnPrev"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnPlay"
        android:layout_margin="5dp"
        android:layout_toLeftOf="@+id/btnNext"
        android:background="@drawable/nice_button"
        android:text="@string/prev" />

</RelativeLayout>