<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/glossy_gradient"
    >

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/viewPager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <android.support.v4.view.PagerTitleStrip
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/LightSkyBlue"
            android:paddingTop="15dp"
            style="@style/SubTitleFont" />
    </android.support.v4.view.ViewPager>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >
		
        <TextView
            style="@style/TitleFont"
            android:id="@+id/txtScoreTitle"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:text="@string/result_score" />
			
        <TextView
            android:id="@+id/txtScore"
            style="@style/TitleFont"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="12dp"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_toRightOf="@+id/txtScoreTitle" />
        
        <Button
            android:id="@+id/btnSave"
            android:layout_width="50dp"
        	android:layout_height="40dp"
        	android:layout_margin="5dp"
            style="@style/NiceButton"
            android:text="@string/save"
            android:layout_toLeftOf="@+id/btnCancel" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="80dp"
        	android:layout_height="40dp"
        	android:layout_margin="5dp"
            style="@style/NiceButton"
            android:text="@string/cancel"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

</LinearLayout>